k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsfeed-service
  labels:
    app: newsfeed-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsfeed-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: newsfeed-service
    spec:
      containers:
        - name: newsfeed-service
          image: ghcr.io/agile-software-engineering-25/team-5-backend-newsfeed:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe: null

          livenessProbe: null

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "300m"
