k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dms
  namespace: ase-7
  labels:
    app: dms
spec:
  selector:
    app: dms
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
